session21-python/kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskboard
  template:
    metadata:
      labels:
        app: taskboard
    spec:
      containers:
      - name: app
        image: ghcr.io/rkawasthiii/taskboard:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
        startupProbe:
          httpGet: {path: /healthz, port: 8000}
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          httpGet: {path: /readyz, port: 8000}
          periodSeconds: 5
        livenessProbe:
          httpGet: {path: /healthz, port: 8000}
          periodSeconds: 10
