session21-python/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskboard
spec:
  selector:
    app: taskboard
  ports:
  - port: 80
    targetPort: 8000
