session21-python/kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: taskboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskboard
            port:
              number: 80
